--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,27 @@
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Restaurants</title>
-        <link rel="stylesheet" type="text/css" href="./styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-    </head>
-    <body>
-        <main class="main-content">
-            <h1>Restaurant Menus</h1>
-            <h2>Please choose your restaurant to get the menu</h2>
-            <form action="/restaurant" method="GET">
-                <label for="restaurantId">Select a restaurant:</label>
-                <select name="restaurantId" id="restaurantId">
-                    <% restaurants.forEach((restaurant) => { %>
-                        <option value="<%= restaurant.id %>"><%= restaurant.name %></option>
-                    <% }) %>
-                </select>
-                <button type="submit">Get the menu!</button>
-            </form>
-        </main>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <title>Restaurant Menus</title>
+</head>
+<body>
+    <main class="main-content">
+        <h1>Restaurant Menus</h1>
+        <h2>Please choose your restaurant to get the menu</h2>
+        <form action="/restaurant" method="GET">
+            <label for="restaurantId">Select a restaurant:</label>
+            <select name="restaurantId" id="restaurantId">
+                <% restaurants.forEach((restaurant) => { %>
+                    <option value="<%= restaurant.id %>"><%= restaurant.name %></option>
+                <% }) %>
+            </select>
+            <button type="submit">Get the menu!</button>
+        </form>
+        <br>
+        <a href="/alerts">View Menu Alerts</a> <!-- Link to Menu Alerts Page -->
+    </main>
+</body>
 </html>
+
